<resources>
    <string name="app_name">MyWatchlist</string>
    <!--<string name="default_web_client_id">AIzaSyCG36hZ8VjwDr44CUiXvn8Ndh35gO7C7Ow</string>-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="tab_title_recently_added">RECENTLY ADDED</string>
    <string name="tab_title_movies">MOVIES</string>
    <string name="tab_title_series">SERIES</string>
    <string name="error_title">Oops</string>
    <string name="field_email">email</string>
    <string name="message_confirmation_add_content">Add %1$s to your watchlist?</string>
    <string name="message_confirmation_archive_content">We are going to archive %1$s from your watchlist, have you watched it?</string>
    <string name="title_add_content">Add to list</string>
    <string name="title_archive_content">Archive item</string>
    <string name="movies">movie</string>
    <string name="series">series</string>
    <string name="title_success">Yay!</string>
    <string name="welcome_message">Not actually doing anything\n just wanted to say hello!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_archive">Your archive</string>
    <string name="title_loading">Working</string>
    <string name="message_loading">Hang in there…</string>
    <string name="title_details">Details</string>
    <string name="label_director">Director: </string>
    <string name="label_genre">Genre:</string>
    <string name="action_archive">Mark as watched</string>
    <string name="title_plot">Plot</string>
    <string name="title_actors">Actors</string>
    <string name="title_misc">Misc</string>
    <string name="label_runtime">Runtime:</string>
    <string name="label_released">Released:</string>
    <string name="label_production">Production:</string>
    <string name="label_by">By: </string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_up">Sign up</string>
    <string name="release_year">Release year</string>
    <string name="label_title">Title</string>
    <string name="label_plot">Plot</string>
    <string name="label_poster">Supply a link to the poster</string>
    <string name="nav_add_to_list">Add to list</string>
    <string name="nav_your_archive">Your archive</string>
    <string name="nav_add_new_content">Add new content</string>
    <string name="nav_logout">Logout</string>
    <string name="warning_empty_fields">Looks like some fields are empty</string>
    <string name="user_profile">User profile</string>
    <string name="description_archive_content">Archive content</string>
    <string name="cancel">Cancel</string>
    <string name="delete_content">Delete item</string>
    <string name="message_confirmation_delete_content">Are you sure you want to remove this item from your list?</string>
    <string name="title_delete_content">Delete item</string>
    <string name="message_clear_archive">Are you sure you want to delete all items from your archive?</string>
    <string name="title_clear_archive">Clear archive</string>
    <string name="clear_archive">Clear archive</string>
    <string name="message_confirmation_logout">Are you sure?</string>
    <string name="title_logout">Logging you out</string>
    <string name="message_activate_acc">You account is pending activation, change your password to proceed.</string>
    <string name="title_pending_activation">Account pending</string>
    <string name="prompt_confirmation">Confirmation</string>
    <string name="action_change_password">Change password</string>
    <string name="title_new_password">New password</string>
    <string name="warning_passwords_do_not_match">Passwords do not match.</string>
    <string name="message_password_changed">Password successfully changed.</string>
    <string name="nav_change_password">Change password</string>
    <string name="message_sign_up">Please provide an active email address so we can create your account and keep your lists stored :)</string>
    <string name="action_cancel">Cancel</string>
    <string name="message_email_sent">Your account was successfully created, check you email for further instructions.</string>
    <string name="title_account_created">Account created!</string>
    <string name="action_reset_password">Reset password</string>
    <string name="message_reset_password">Inform the email you used to sign up and we will reset your passowrd and send you a new one.</string>
    <string name="action_forgot_password">Forgot password</string>
    <string name="message_pending_reset">Your password has been reset, change it to proceed.</string>
    <string name="ok">Ok</string>
    <string name="action_add_content">Add to your list</string>
    <string name="action_share_content">Share</string>
    <string name="title_search">Search</string>
    <string name="title_new_user">Register</string>
    <string name="title_change_password">Change password</string>
    <string name="title_forgot_password">Forgot password</string>
    <string name="hint_search_content">Search for content on your list</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
