<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context="com.gfb.watchlist.activity.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/message_reset_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:imeOptions="actionGo"
                android:singleLine="true"
                android:textColor="@color/white"
                android:theme="@style/EditTextLabel" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btReset"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/green_400"
            android:text="@string/action_reset_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"/>


        <TextView
            android:id="@+id/btCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/action_cancel"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>
</LinearLayout>

