<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.gfb.watchlist.activity.NewUserActivity">

    <LinearLayout
        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginBottom="100dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/message_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:theme="@style/EditTextLabel" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/btEnter"
            android:layout_width="match_parent"
            android:layout_height="@dimen/confirmation_button_height"
            android:background="@color/confirmation_button"
            android:gravity="center"
            android:imeOptions="actionGo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/action_sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/confirmation_button_text_size" />

        </LinearLayout>


        <TextView
            android:id="@+id/btCancel"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:text="@string/action_cancel"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>
</LinearLayout>
